@@ -1,3 +1,8 @@
+2007-01-15  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Patch from Paolo Borelli to add the
+	text/x-rpm-spec mime-type for RPM .spec files (Closes: #9331)
+
 2007-01-12  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add image/x-icns mime-type for MacOS X icons
